# MICaDo

./: .gitignore  LICENSE  README.md  environment.yml  matplotlib_style.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test-install.yml
examples/: example_micado.ipynb  example_mvica_lingam.ipynb
experiments/: run_simulation_fig2_shica.py  run_simulation_noise.py  sanity_check_ica_algorithms.ipynb  sanity_check_lingam.ipynb  sanity_check_multi_group_direct_lingam.ipynb  sanity_check_mvica_lingam.ipynb  sanity_check_permutation_Q.ipynb  sanity_check_step_5.ipynb
experiments/plotting/: plot_fig2_shica.py  plot_simulation_noise_in_xaxis.py
experiments/runs/: run_simulation_noise.py
experiments/sanity_checks/: sanity_check_ica_algorithms.ipynb  sanity_check_step_5.ipynb
micado/: micado.py
mvica_lingam/: mvica_lingam.py
real_data_experiments/: process_multi_subjects.py  process_one_subject.py  process_smt_data.py  sanity_check_smt_data.ipynb  sanity_check_smt_data.py  utils.py
real_data_experiments/1_preprocessing/: process_multi_subjects.py  utils.py
real_data_experiments/3_runs/: mvica_lingam_smt_data.py  run_camcan.py  run_camcan_multiple_times.py  run_camcan_noise_diversity.py  run_multiple_times.py
real_data_experiments/5_plotting/: plot_results_camcan.py  plot_results_multiple_runs.py  plot_results_noise_diversity.py
real_data_experiments/data/: labels_aparc_3_subjects.pkl
real_data_experiments/data_envelopes/: X_aparc_3_subjects.npy  X_aparc_3_subjects.npy.npz  X_aparc_40_subjects_old.npy
(+93 files in other folders)
