[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micado"
version = "0.0.1"
description = "Multi-view ICA-based Causal Discovery"
readme = "README.md"
authors = [
    { name = "Ambroise Heurtebise" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.12",
    "scikit-learn>=0.23",
    "python-picard",
    "scipy>=0.18.0",
    "matplotlib>=2.0.0",
    "multiviewica",
    "shica"
]

[tool.setuptools]
packages = ["micado"]
